# fastapi-demo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/crud/: student_crud.py
app/routes/: students.py
app/schemas/: student_schema.py
app/utils/: security.py
tests/: student_test.py
