[project]
name = "fastapi-demo"
version = "0.1"
description = "This is my project on fastAPI"
authors = [
    {name = "kumar699",email = "pawanzmr15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "app" }
]

